--- a/components/hotel-item/index.wxml
+++ b/components/hotel-item/index.wxml
@@ -14,8 +14,8 @@
   </view>
   <view class="info-wrap">
     <view class="price">
-      <text style="margin-right: 4rpx; color: #EE0D23;">¥</text>
-      <text class="num" style="color: #EE0D23; font-size: 32rpx;">{{ item.price || 0 }}</text>
+      <text style="margin-right: 4rpx; color: #ff5040;">¥</text>
+      <text class="num" style="color: #ff5040; font-size: 32rpx;">{{ item.price || 0 }}</text>
       <text style="margin-left: 2rpx;">起</text>
     </view>
     <view class="sales">
