--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -63,29 +63,10 @@
 
 .video-info {
   position: absolute;
-  left: 8px;
-  bottom: 8px;
+  left: 0;
+  bottom: 0;
+  padding: 24rpx;
   width: 620rpx;
-}
-
-.goods-tag {
-  padding: 10rpx;
-  height: 60rpx;
-  width: fit-content;
-  max-width: 360rpx;
-  border-radius: 8rpx;
-  background-color: rgba(0, 0, 0, 0.35);
-}
-.goods-icon {
-  margin-right: 10rpx;
-  width: 40rpx;
-  height: 40rpx;
-}
-.goods-name {
-  flex: 1;
-  color: #fff;
-  font-size: 26rpx;
-  line-height: 1;
 }
 
 .author-name {
@@ -109,6 +90,49 @@
   margin-top: 16rpx;
   font-size: 26rpx;
   line-height: 40rpx;
+}
+
+.commodity-list {
+  margin-top: 24rpx;
+  width: 100%;
+  line-height: 1;
+  overflow-x: scroll;
+}
+.commodity-item {
+  display: inline-block;
+  height: 100rpx;
+  width: 280rpx;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-radius: 12rpx;
+}
+.commodity-item-inner {
+  padding: 12rpx;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.comodity-icon {
+  width: 36rpx;
+  height: 36rpx;
+}
+.commodity-name {
+  flex: 1;
+  color: #fff;
+  font-size: 24rpx;
+  font-weight: 600;
+}
+.commodity-data-wrap {
+  margin-top: 12rpx;
+}
+.market-price {
+  margin-left: 8rpx;
+  color: #fff;
+  font-size: 20rpx;
+  text-decoration: line-through;
+}
+.sales-volumns {
+  color: #fff;
+  font-size: 20rpx;
 }
 
 .pause-icon {
