feat: 短视频相关商品

--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -100,6 +100,7 @@
 }
 .commodity-item {
   display: inline-block;
+  margin-right: 24rpx;
   height: 100rpx;
   width: 280rpx;
   background-size: 100%;
