--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -66,7 +66,7 @@
   left: 0;
   bottom: 0;
   padding: 24rpx;
-  width: 620rpx;
+  width: 644rpx;
 }
 
 .author-name {
@@ -97,12 +97,13 @@
   width: 100%;
   line-height: 1;
   overflow-x: scroll;
+  white-space: nowrap;
 }
 .commodity-item {
   display: inline-block;
   margin-right: 24rpx;
   height: 100rpx;
-  width: 280rpx;
+  width: 260rpx;
   background-size: 100%;
   background-repeat: no-repeat;
   border-radius: 12rpx;
@@ -113,8 +114,8 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 .comodity-icon {
-  width: 36rpx;
-  height: 36rpx;
+  width: 32rpx;
+  height: 32rpx;
 }
 .commodity-name {
   flex: 1;
@@ -123,7 +124,7 @@
   font-weight: 600;
 }
 .commodity-data-wrap {
-  margin-top: 12rpx;
+  margin-top: 16rpx;
 }
 .market-price {
   margin-left: 8rpx;
