--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -135,5 +135,7 @@
   goodsInfo="{{goodsInfo}}"
   bind:hide="hideSpecPopup"
 />
+
 <!-- 分享 -->
-<poster-modal wx:if="{{posterModalVisible}}" scene="7" info="{{posterInfo}}" bind:hide="hidePosterModel" />
+<modal-mask wx:if="{{posterModalVisible}}" bindtap="hidePosterModal" filter />
+<poster-modal wx:if="{{posterModalVisible}}" scene="7" info="{{posterInfo}}" bind:hide="hidePosterModal" />
