--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -18,7 +18,7 @@
         {{item}}
       </view>
     </scroll-view>
-    <button class="share-btn" hover-class="none">
+    <button class="share-btn" bindtap="share" hover-class="none">
       <image class="share-icon" src="./images/share.png" />
     </button>
   </view>
@@ -57,7 +57,7 @@
         <view class="hotel-name">{{hotelInfo.name}}</view>
         <view class="hotel-score">{{hotelInfo.score}}</view>
       </view>
-      <image class="share-icon" src="./images/share.png" />
+      <image class="share-icon" bindtap="share" src="./images/share.png" />
     </view>
     <view class="name-desc omit single-line">
       {{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][hotelInfo.grade - 1]}} ｜ {{hotelInfo.englishName}}
@@ -285,3 +285,7 @@
   type="range" 
   color="#77a9fd" 
 />
+
+<!-- 分享 -->
+<modal-mask wx:if="{{posterModalVisible}}" bindtap="hidePosterModal" filter />
+<poster-modal wx:if="{{posterModalVisible}}" scene="5" info="{{posterInfo}}" bind:hide="hidePosterModal" />
