--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -33,7 +33,7 @@
         data-index="{{index}}"
       >{{item}}</view>
     </scroll-view>
-    <button class="share-btn" hover-class="none">
+    <button class="share-btn" bindtap="share" hover-class="none">
       <image class="share-icon" src="./images/share.png" />
     </button>
   </view>
@@ -71,7 +71,7 @@
       <view class="restaurant-name">{{restaurantInfo.name}}</view>
       <view class="category-tag row">{{restaurantInfo.categoryName}}</view>
     </view>
-    <image class="share-icon" src="./images/share.png" />
+    <image class="share-icon" bindtap="share" src="./images/share.png" />
   </view>
 
   <view class="score-wrap row">
@@ -209,3 +209,7 @@
   bind:close="hideTelVisible"
   cancel-text="取消"
 />
+
+<!-- 分享 -->
+<modal-mask wx:if="{{posterModalVisible}}" bindtap="hidePosterModal" filter />
+<poster-modal wx:if="{{posterModalVisible}}" scene="6" info="{{posterInfo}}" bind:hide="hidePosterModal" />
