--- a/pages/subpages/home/media/live/live-play/index.wxml
+++ b/pages/subpages/home/media/live/live-play/index.wxml
@@ -15,18 +15,28 @@
         roomInfo="{{item}}"
         bind:showInputPopup="showInputPopup"
         bind:showGoodsPopup="showGoodsPopup"
-        bind:showSharePopup="showSharePopup"
+        bind:share="share"
         bind:showSubscribeModal="showSubscribeModal"
       />
-      <live-notice wx:if="{{item.status === 3}}" roomInfo="{{item}}" />
+      <live-notice
+        wx:if="{{item.status === 3}}" 
+        roomInfo="{{item}}"
+        bind:share="share"
+      />
     </block>
   </swiper-item>
 </swiper>
 
 <back-icon class="back-icon" style="top: {{statusBarHeight}}px;"/>
 <goods-popup wx:if="{{goodsPopupVisible}}" roomId="{{roomList[curRoomIdx].id}}" bind:hide="hideGoodsPopup" />
-<share-popup wx:if="{{sharePopupVisible}}" roomInfo="{{roomList[curRoomIdx]}}" bind:hide="hideSharePopup" />
 
-<modal-mask wx:if="{{inputPopupVisible || subscribeModalVisible}}" opacity="{{inputPopupVisible ? 0 : 0.3}}" catchtap="hideModal" />
+<modal-mask 
+  wx:if="{{inputPopupVisible || subscribeModalVisible || posterModalVisible}}" 
+  opacity="{{!inputPopupVisible ? 0.3 : 0}}" 
+  filter="{{posterModalVisible}}"
+  catchtap="hideModal"
+/>
 <input-popup wx:if="{{inputPopupVisible}}" roomInfo="{{roomList[curRoomIdx]}}" bind:finish="hideModal" />
 <subscribe-modal  wx:if="{{subscribeModalVisible}}" anchorId="{{roomList[curRoomIdx].anchorInfo.id}}" bind:hide="hideModal" />
+<poster-modal wx:if="{{posterModalVisible}}" scene="1" info="{{posterInfo}}" bind:hide="hideModal" />
+
