--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -14,11 +14,11 @@
     <view class="avatar-wrap">
       <image class="avatar" src="{{authorInfo.avatar}}" />
       <view class="btns-wrap row end">
-        <button class="chat-btn">
+        <button class="chat-btn" hover-class="none">
           <image class="btn-icon" src="./images/chat.png" />
           <text>私聊</text>
         </button>
-        <button class="share-btn">
+        <button class="share-btn" hover-class="none" bindtap="share">
           <image class="btn-icon" src="./images/share.png" />
           <text>分享</text>
         </button>
@@ -65,3 +65,6 @@
     </view>
   </view>
 </view>
+
+<modal-mask wx:if="{{posterModalVisible}}" filter bindtap="hidePosterModal" />
+<poster-modal wx:if="{{posterModalVisible}}" info="{{posterInfo}}" scene="9" />
