--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -19,7 +19,7 @@
   <view class="menu-tab-list row" wx:if="{{isSearching}}">
     <view 
       class="menu-tab {{curMenuIdx === index ? 'active' : '' }} row center" 
-      wx:for="{{['短视频', '游记', '直播']}}" 
+      wx:for="{{['短视频', '游记', '直播', '商品']}}" 
       wx:key="index" 
       bindtap="selectMenu" 
       data-index="{{ index }}"
@@ -27,6 +27,11 @@
       {{item}}
     </view>
   </view>
+
+  <van-dropdown-menu wx:if="{{isSearching && curMenuIdx === 3}}" active-color="#1989fa">
+    <van-dropdown-item value="{{ curGoodsSortIndex }}" options="{{ goodsSortOptions }}" bind:change="setGoodsSortIndex" />
+    <van-dropdown-item value="{{ curGoodsCategoryId }}" options="{{ goodsCategoryOptions }}" bind:change="setGoodsCategoryId" />
+  </van-dropdown-menu>
 </view>
 
 <view class="history-keywords-wrap" wx:if="{{!isSearching}}" style="padding-top: {{statusBarHeight + 65}}px">
@@ -60,19 +65,25 @@
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 0}}" style="padding-top: {{statusBarHeight + 104}}px">
-  <fall-flow wx:if="{{videoList}}" list="{{videoList}}" generic:item="video-item" />
+  <fall-flow wx:if="{{videoList.length}}" list="{{videoList}}" generic:item="video-item" />
   <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="没有找到相关短视频" />
   <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～没有更多了～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 1}}" style="padding-top: {{statusBarHeight + 104}}px">
-  <fall-flow wx:if="{{noteList}}" list="{{noteList}}" generic:item="note-item" />
+  <fall-flow wx:if="{{noteList.length}}" list="{{noteList}}" generic:item="note-item" />
   <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="没有找到相关游记" />
   <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多了～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 2}}" style="padding-top: {{statusBarHeight + 104}}px">
-  <fall-flow wx:if="{{liveList}}" list="{{liveList}}" generic:item="live-item" />
+  <fall-flow wx:if="{{liveList.length}}" list="{{liveList}}" generic:item="live-item" />
   <empty-illus wx:if="{{liveFinished && !liveList.length}}" desc="没有找到相关直播" />
   <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～没有更多了～</view>
+</view>
+
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}" style="padding-top: {{statusBarHeight + 208}}px">
+  <fall-flow wx:if="{{goodsList.length}}" list="{{goodsList}}" generic:item="goods-item" />
+  <empty-illus wx:if="{{goodsFinished && !goodsList.length}}" desc="没有找到相关商品" />
+  <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～没有更多了～</view>
 </view>
