--- a/pages/subpages/common/search/index.wxss
+++ b/pages/subpages/common/search/index.wxss
@@ -77,7 +77,7 @@
 .menu-tab.active::after {
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: 10rpx;
   transform: translateX(-50%);
   width: 24rpx;
   height: 8rpx;
@@ -124,4 +124,9 @@
   color: #999;
   font-size: 24rpx;
   text-align: center;
+}
+
+.van-dropdown-menu {
+  box-shadow: none !important;
+  border-top: 1px solid #eee;
 }
