--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -19,7 +19,7 @@
   <view class="menu-tab-list row" wx:if="{{isSearching}}">
     <view 
       class="menu-tab {{curMenuIdx === index ? 'active' : '' }} row center" 
-      wx:for="{{['短视频', '游记', '直播', '商品']}}" 
+      wx:for="{{['短视频', '游记', '直播', '景点', '酒店', '餐馆', '商品']}}" 
       wx:key="index" 
       bindtap="selectMenu" 
       data-index="{{ index }}"
@@ -28,7 +28,7 @@
     </view>
   </view>
 
-  <van-dropdown-menu wx:if="{{isSearching && curMenuIdx === 3}}" active-color="#1989fa">
+  <van-dropdown-menu wx:if="{{isSearching && curMenuIdx === 6}}" active-color="#1989fa">
     <van-dropdown-item value="{{ curGoodsSortIndex }}" options="{{ goodsSortOptions }}" bind:change="setGoodsSortIndex" />
     <van-dropdown-item value="{{ curGoodsCategoryId }}" options="{{ goodsCategoryOptions }}" bind:change="setGoodsCategoryId" />
   </van-dropdown-menu>
@@ -82,7 +82,25 @@
   <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}" style="padding-top: {{statusBarHeight + 208}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}" style="padding-top: {{statusBarHeight + 104}}px">
+  <fall-flow wx:if="{{scenicList}}" list="{{scenicList}}" generic:item="scenic-item" />
+  <empty-illus wx:if="{{scenicFinished && !scenicList.length}}" desc="没有找到相关景点" />
+  <view class="no-more-tips" wx:if="{{scenicFinished && scenicList.length}}">～没有更多了～</view>
+</view>
+
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 4}}" style="padding-top: {{statusBarHeight + 104}}px">
+  <fall-flow wx:if="{{hotelList}}" list="{{hotelList}}" generic:item="hotel-item" />
+  <empty-illus wx:if="{{hotelFinished && !hotelList.length}}" desc="没有找到相关酒店" />
+  <view class="no-more-tips" wx:if="{{hotelFinished && hotelList.length}}">～没有更多了～</view>
+</view>
+
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 5}}" style="padding-top: {{statusBarHeight + 104}}px">
+  <fall-flow wx:if="{{restaurantList}}" list="{{restaurantList}}" generic:item="restaurant-item" />
+  <empty-illus wx:if="{{restaurantFinished && !restaurantList.length}}" desc="没有找到相关美食" />
+  <view class="no-more-tips" wx:if="{{restaurantFinished && restaurantList.length}}">～没有更多了～</view>
+</view>
+
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 6}}" style="padding-top: {{statusBarHeight + 208}}px">
   <fall-flow wx:if="{{goodsList.length}}" list="{{goodsList}}" generic:item="goods-item" />
   <empty-illus wx:if="{{goodsFinished && !goodsList.length}}" desc="没有找到相关商品" />
   <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～没有更多了～</view>
