--- a/components/commodity-list/index.wxml
+++ b/components/commodity-list/index.wxml
@@ -13,7 +13,7 @@
     <view class="commodity-item row">
       <view class="commodity-image-wrap">
         <image class="commodity-image" src="{{item.cover}}" />
-        <view class="type-tag row">{{['景点', '酒店',  '餐馆', '商品'][item.type - 1]}}</view>
+        <view class="type-tag row">{{['景点', '酒店',  '餐厅', '商品'][item.type - 1]}}</view>
       </view>
       <view class="commodity-info">
         <view class="commodity-name omit single-line">{{item.name}}</view>
