--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -1,13 +1,27 @@
-<view class="header" style="padding-top: {{statusBarHeight}}px">
-  <view class="search-bar row">
-    <view class="back-wrap row">
-      <image class="back-icon" src="https://img.ubo.vip/mp/search/back.png" bindtap="navBack" />
-    </view>
+<wxs module="TIME" src="/utils/filters/time.wxs" />
+
+<view class="header">
+  <view class="search-bar">
     <view class="search-content row">
+      <view class="calendar-bar" wx:if="{{isSearching && curMenuIdx === 5}}" bindtap="showCalendarPopup">
+        <view class="calendar-item">
+          <text style="color: #999;">住</text>
+          <text>{{TIME.transform(checkInDate, 'MM-DD')}}</text>
+        </view>
+        <view class="calendar-item">
+          <text style="color: #999;">离</text>
+          <text>{{TIME.transform(checkOutDate, 'MM-DD')}}</text>
+        </view>
+      </view>
       <image class="search-icon" src="https://img.ubo.vip/mp/index/search/index-search.png" />
-      <input class="search-input"
-        value="{{keywords}}" bindinput="setKeywords" bindconfirm="search" 
-        placeholder="请输入搜索关键字" type="text" confirm-type="search" 
+      <input 
+        class="search-input"
+        value="{{keywords}}" 
+        bindinput="setKeywords" 
+        bindconfirm="search" 
+        placeholder="请输入搜索关键字" 
+        type="text" 
+        confirm-type="search" 
       />
       <view class="cancel-btn" wx:if="{{keywords}}" bindtap="cancelSearch">
         <image class="cancel-icon" src="https://img.ubo.vip/mp/search/clear-search.png" />
@@ -34,14 +48,9 @@
       {{item}}
     </view>
   </scroll-view>
-
-  <van-dropdown-menu wx:if="{{isSearching && curMenuIdx === 7}}" active-color="#1989fa">
-    <van-dropdown-item value="{{ curGoodsSortIndex }}" options="{{ goodsSortOptions }}" bind:change="setGoodsSortIndex" />
-    <van-dropdown-item value="{{ curGoodsCategoryId }}" options="{{ goodsCategoryOptions }}" bind:change="setGoodsCategoryId" />
-  </van-dropdown-menu>
 </view>
 
-<view class="history-keywords-wrap" wx:if="{{!isSearching}}" style="padding-top: {{statusBarHeight + 65}}px">
+<view class="history-keywords-wrap" wx:if="{{!isSearching}}">
   <view class="title row between">
     <view>历史搜索</view>
     <image class="delete-icon" wx:if="{{historyKeywords.length}}" src="https://img.ubo.vip/mp/selection/search/del-history.png" bindtap="clearHistoryKeywords" />
@@ -71,44 +80,54 @@
   </view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 1}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 1}}">
   <fall-flow wx:if="{{videoList.length}}" list="{{videoList}}" generic:item="video-item" />
   <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="没有找到相关短视频" />
   <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 2}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 2}}">
   <fall-flow wx:if="{{noteList.length}}" list="{{noteList}}" generic:item="note-item" />
   <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="没有找到相关游记" />
   <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}">
   <fall-flow wx:if="{{liveList.length}}" list="{{liveList}}" generic:item="live-item" />
   <empty-illus wx:if="{{liveFinished && !liveList.length}}" desc="没有找到相关直播" />
   <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 4}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 4}}">
   <fall-flow wx:if="{{scenicList}}" list="{{scenicList}}" generic:item="scenic-item" />
   <empty-illus wx:if="{{scenicFinished && !scenicList.length}}" desc="没有找到相关景点" />
   <view class="no-more-tips" wx:if="{{scenicFinished && scenicList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 5}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 5}}">
   <fall-flow wx:if="{{hotelList}}" list="{{hotelList}}" generic:item="hotel-item" />
   <empty-illus wx:if="{{hotelFinished && !hotelList.length}}" desc="没有找到相关酒店" />
   <view class="no-more-tips" wx:if="{{hotelFinished && hotelList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 6}}" style="padding-top: {{statusBarHeight + 98}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 6}}">
   <fall-flow wx:if="{{restaurantList}}" list="{{restaurantList}}" generic:item="restaurant-item" />
   <empty-illus wx:if="{{restaurantFinished && !restaurantList.length}}" desc="没有找到相关美食" />
   <view class="no-more-tips" wx:if="{{restaurantFinished && restaurantList.length}}">～没有更多了～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 7}}" style="padding-top: {{statusBarHeight + 147}}px">
+<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 7}}">
   <fall-flow wx:if="{{goodsList.length}}" list="{{goodsList}}" generic:item="goods-item" />
   <empty-illus wx:if="{{goodsFinished && !goodsList.length}}" desc="没有找到相关商品" />
   <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～没有更多了～</view>
 </view>
+
+<van-calendar 
+  default-date="{{[checkInDate, checkOutDate]}}"
+  show="{{calendarPopupVisibel}}" 
+  formatter="{{ formatter }}" 
+  bind:close="hideCalendarPopup" 
+  bind:confirm="setCalendar" 
+  type="range" 
+  color="#77a9fd" 
+/>
