--- a/pages/subpages/common/search/components/restaurant-item/index.wxml
+++ b/pages/subpages/common/search/components/restaurant-item/index.wxml
@@ -1,29 +1,57 @@
 <navigator 
-  class="restaurant row"
+  class="restaurant"
   wx:key="index"
   url="/pages/subpages/mall/catering/subpages/restaurant-detail/index?id={{item.id}}"
   hover-class="none"
 >
-  <image class="restaurant-cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
-  <view class="restaurant-content">
-    <view class="restaurant-title omit single-line">{{item.name}}</view>
-    <view class="score-wrap">
-      <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
-      <view class="score {{ item.score ? 'active' : '' }}">{{item.score || '暂无评分'}}</view>
-      <view class="price">¥{{item.price}}/人</view>
-    </view>
-    <view class="open-time-wrap row top">
-      <view class="open-status row {{openStatus ? 'active' : ''}}">{{openStatus ? '营业中' : '休息中'}}</view>
-      <view class="open-time-list">
-        <view class="open-time" wx:for="{{openTimeDescList}}" wx:for-item="desc" wx:for-index="descIdx" wx:key="descIdx">{{desc}}</view>
+  <view class="restaurant-main row">
+    <image class="restaurant-cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
+    <view class="restaurant-content">
+      <view class="row">
+        <view class="restaurant-title omit single-line">{{item.name}}</view>
+        <view class="restaurant-category row">{{item.categoryName}}</view>
+      </view>
+      <view class="score-wrap">
+        <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+        <view class="score {{ item.score ? 'active' : '' }}">{{item.score || '暂无评分'}}</view>
+        <view class="price">¥{{item.price}}/人</view>
+      </view>
+      <view class="open-time-wrap row top">
+        <view class="open-status row {{openStatus ? 'active' : ''}}">{{openStatus ? '营业中' : '休息中'}}</view>
+        <view class="open-time-list">
+          <view class="open-time" wx:for="{{openTimeDescList}}" wx:for-item="desc" wx:for-index="descIdx" wx:key="descIdx">{{desc}}</view>
+        </view>
+      </view>
+      <view class="facilityList">
+        <view class="facility" wx:for="{{facilityList}}" wx:for-item="facility" wx:for-index="facilityIdx" wx:key="facilityIdx">{{facility}}</view>
+      </view>
+      <view class="position-wrap">
+        <image class="position-icon" src="./images/position.png" />
+        <text>{{item.address}}，距您{{distance}}km</text>
       </view>
     </view>
-    <view class="facilityList">
-      <view class="facility" wx:for="{{facilityList}}" wx:for-item="facility" wx:for-index="facilityIdx" wx:key="facilityIdx">{{facility}}</view>
+  </view>
+  <view class="meal-ticket-list">
+    <view class="meal-ticket row" wx:if="{{item.mealTicketList.length}}">
+      <view class="ticket-lebal-wrap row end">
+        <view class="ticket-lebal row">新客特惠</view>
+      </view>
+      <view class="ticket-content row">
+        <view class="ticket-icon row center">券</view>
+        <view class="ticket-price">¥{{item.mealTicketList[0].price}}</view>
+        <view class="ticket-desc">{{item.mealTicketList[0].originalPrice}}元代金券</view>
+      </view>
     </view>
-    <view class="position-wrap">
-      <image class="position-icon" src="./images/position.png" />
-      <text>{{item.address}}，距您{{distance}}km</text>
+    <view class="meal-ticket row" wx:if="{{item.setMealList.length}}">
+      <view class="ticket-lebal-wrap row end">
+        <view class="ticket-lebal row">剩余01:29:58</view>
+      </view>
+      <view class="ticket-content row">
+        <view class="ticket-icon row center">惠</view>
+        <view class="ticket-price">¥{{item.setMealList[0].price}}</view>
+        <view class="ticket-discount row">{{setMealDiscount}}折</view>
+        <view class="ticket-desc">{{item.setMealList[0].name}}</view>
+      </view>
     </view>
   </view>
 </navigator>
