--- a/pages/subpages/common/search/components/restaurant-item/index.wxss
+++ b/pages/subpages/common/search/components/restaurant-item/index.wxss
@@ -1,9 +1,11 @@
 .restaurant {
   margin-bottom: 24rpx;
   padding: 24rpx;
-  font-size: 0;
   background: #fff;
   border-radius: 24rpx;
+}
+.restaurant-main {
+  font-size: 0;
 }
 
 .restaurant-cover {
@@ -19,11 +21,12 @@
   flex: 1;
 }
 .restaurant-title {
+  flex: 1;
   color: #333;
   font-size: 28rpx;
   font-weight: bold;
 }
-.category {
+.restaurant-category {
   margin-left: 8rpx;
   padding: 0 12rpx;
   height: 32rpx;
@@ -106,4 +109,72 @@
   margin-right: 6rpx;
   width: 20rpx;
   height: 20rpx;
+}
+
+.meal-ticket-list {
+  margin-top: 20rpx;
+}
+.meal-ticket {
+  margin-top: 12rpx;
+}
+.ticket-lebal-wrap {
+  width: 204rpx;
+}
+.ticket-lebal {
+  position: relative;
+  margin-right: 12rpx;
+  padding-left: 12rpx;
+  padding-right: 6rpx;
+  height: 32rpx;
+  color: #F66B38;
+  font-size: 20rpx;
+  line-height: 1;
+  border-radius: 4rpx 0 0 4rpx;
+  background: #f6eeec;
+}
+.ticket-lebal::after {
+  position: absolute;
+  top: 0;
+  right: -24rpx;
+  width: 0;
+  height: 0;
+  content: '';
+  border-top: 16rpx solid transparent;
+  border-bottom: 16rpx solid transparent;
+  border-left: 12rpx solid #f6eeec;
+  border-right: 12rpx solid transparent;
+}
+.ticket-content {
+  margin-left: 20rpx;
+}
+.ticket-icon {
+  width: 32rpx;
+  height: 32rpx;
+  color: #F66B38;
+  font-size: 20rpx;
+  font-weight: 500;
+  line-height: 1;
+  border-radius: 4rpx;
+  background: #f6eeec;
+}
+.ticket-price {
+  margin-left: 10rpx;
+  color: #F66B38;
+  font-size: 24rpx;
+  font-weight: 500;
+}
+.ticket-desc {
+  margin-left: 10rpx;
+  color: #333;
+  font-size: 22rpx;
+}
+.ticket-discount {
+  margin-left: 10rpx;
+  padding: 0 6rpx;
+  height: 24rpx;
+  color: #F66B38;
+  font-size: 20rpx;
+  line-height: 1;
+  border-radius: 4rpx;
+  background: #f6eeec;
 }
