--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -5,7 +5,7 @@
   </view>
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/mall/index">
     <image class="icon" src="/images/tab-bar/mall{{tabType === 'mall' ? '_fill' : ''}}.png" />
-    <view class="text {{tabType === 'home' ? 'selected' : ''}}">商城</view>
+    <view class="text {{tabType === 'mall' ? 'selected' : ''}}">商城</view>
   </view>
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/mine/index">
     <image class="icon" src="/images/tab-bar/mine{{tabType === 'mine' ? '_fill' : ''}}.png" />
