--- a/pages/subpages/common/register/index.wxss
+++ b/pages/subpages/common/register/index.wxss
@@ -64,53 +64,82 @@
   font-size: 24rpx;
 }
 
-.modal-mask {
-  position: absolute;
+.auth-modal {
+  position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(6px);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  z-index: 100;
 }
-
-.modal-dialog {
+.modal-main {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 570rpx;
-  height: 542rpx;
-  border-radius: 50rpx;
-  background: rgb(4, 6, 15);
+  padding: 50rpx;
+  width: 670rpx;
+  border-radius: 30rpx;
+  background: #fff;
 }
-.modal-title {
-  padding-top: 30rpx;
-  text-align: center;
+.model-title {
+  color: #333;
+  font-size: 32rpx;
 }
-.modal-content {
-  color: #fff;
-  line-height: 22px;
-  text-align: center;
-  font-size: 28rpx;
+.modal-tips {
+  position: relative;
+  margin-top: 10rpx;
+  color: #999;
+  font-size: 24rpx;
 }
-.btn-confirm {
+
+.modal-form {
   margin-top: 50rpx;
+}
+.form-item {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 360rpx;
-  height: 80rpx;
-  color: #fff;
-  font-size: 32rpx;
-  font-weight: bold;
-  background: center center #4A54FF;
-  background-image: linear-gradient(315deg,#6772FF 0,#00F9E5 100%);
-  border-radius: 40rpx;
+  height: 140rpx;
+  border-bottom: 1px solid #f5f5f5;
 }
-.modal-footer {
+.form-item:first-child {
+  border-top: 1px solid #f5f5f5;
+}
+.label {
+  margin-right: 30rpx;
+  color: #333;
+  font-size: 28rpx;
+  font-weight: 500;
+}
+.avatar-wrapper {
+  flex: 1;
+  height: 100rpx;
+}
+.avatar {
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 16rpx;
+}
+.more-icon {
+  width: 24rpx;
+  height: 24rpx;
+}
+.nickname-input {
+  flex: 1;
+  font-size: 28rpx;
+}
+
+.save-btn {
   display: flex;
   justify-content: center;
-}
-.modal-footer button {
-  text-align: center;
+  align-items: center;
+  margin: 50rpx auto 0;
+  width: 464rpx;
+  height: 90rpx;
+  color: #FFE5BD;
+  font-size: 32rpx;
+  font-weight: bold;
+  border-radius: 45rpx;
+  background: linear-gradient(128deg, #404A5C 0%, #0F131A 100%);
 }
