--- a/components/hotel-item/index.wxss
+++ b/components/hotel-item/index.wxss
@@ -68,9 +68,9 @@
 .label {
   margin-right: 10rpx;
   max-width: 170rpx;
-  color: #999;
+  color: var(--theme-color);
   font-size: 20rpx;
-  background: #f1f1f1;
+  background: #ebf2fd;
   padding: 2rpx 10rpx;
   border-radius: 10rpx;
 }
