--- a/components/restaurant-item/index.wxss
+++ b/components/restaurant-item/index.wxss
@@ -69,9 +69,9 @@
   margin-right: 10rpx;
   max-width: 170rpx;
   color: #999;
+  color: var(--theme-color);
   font-size: 20rpx;
-  background: #f1f1f1;
-  padding: 2rpx 10rpx;
+  background: #ebf2fd;
   border-radius: 10rpx;
 }
 
