--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -29,31 +29,7 @@
     </swiper-item>
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
-        <view class="top-media-wrap">
-          <view class="top-media">
-            <image class="top-media-cover" src="{{topMediaList[curTopMediaIdx].imageList[0]}}" mode="aspectFill" />
-            <view class="top-media-time">
-              <view class="time-date">13</view>
-              <view class="time-split"></view>
-              <view>
-                <view class="time-month">NOV</view>
-                <view class="time-year">2024</view>
-              </view>
-              <image class="top-desc" src="./images/best_note.png" />
-            </view>
-          </view>
-          <view class="top-media-menu">
-            <image 
-              class="top-media-menu-item {{curTopMediaIdx === index ? 'active' : ''}}" 
-              wx:for="{{topMediaList}}" 
-              wx:key="index" 
-              src="{{item.imageList[0]}}"
-              bindtap="selectTopMedia"
-              data-index="{{index}}"
-              mode="aspectFill"
-            />
-          </view>
-        </view>
+        <top-media topMediaList="{{topMediaList}}" />
         <fall-flow class="fall-flow" list="{{mediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无列表" />
         <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
