--- a/pages/tab-bar-pages/home/components/top-media/index.wxml
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxml
@@ -8,7 +8,7 @@
         <view class="time-month">NOV</view>
         <view class="time-year">2024</view>
       </view>
-      <image class="top-desc" src="./images/best_note.png" />
+      <image class="top-desc" src="./images/{{curTopMediaIdx === 0 ? 'today_' : ''}}best_note.png" />
     </view>
     <view class="top-media-info">
       <view class="top-media-title omit single-line">{{topMediaList[curTopMediaIdx].title}}</view>
